--- a/src/app/post-login/components/custom-groups/custom-date-picker/custom-date-picker.component.html
+++ b/src/app/post-login/components/custom-groups/custom-date-picker/custom-date-picker.component.html
@@ -1,1 +1,6 @@
-<kendo-datepicker class="date-picker" (valueChange)="onDateChange($event)"></kendo-datepicker>
+<kendo-datepicker 
+    class="date-picker" 
+    (valueChange)="onDateChange($event)" 
+    [disabledDates]="shouldDisableDates ? disableDates : null"
+>
+</kendo-datepicker>
