--- a/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
+++ b/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
@@ -110,7 +110,6 @@ button:focus{
     }
 }
 
-
 // INPUT STYLE //
 :host ::ng-deep {
     .k-input{
@@ -215,6 +214,7 @@ button:focus{
         line-height: 24px;
         border-bottom: 1px solid #DFDFDF;
         padding-bottom: 16px;
+        text-transform: uppercase;
     }
 
     &-subheading{
@@ -322,9 +322,9 @@ button:focus{
 
 .form-actions{
     display: flex;
+    flex-direction: column;
     gap: 12px;
     margin-top: 25px;
-    justify-content: end;
 }
 
 .btn-save{
@@ -458,9 +458,17 @@ button:focus{
     } 
 }
 
+.table-button-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows:repeat(4,auto);
+    column-gap: 25px;
+}
+
 .table-section{
     margin-top: 24px;
     position: relative;
+    grid-column: 1/3;
 }
 
 // TABLE STYLE //
@@ -587,6 +595,10 @@ button:focus{
 
     .ag-column-select-column-group .ag-icon-tree-closed{
         margin-top: -5px;
+    }
+
+    .ag-pinned-left-header .ag-header-cell-text{
+        text-transform: none;
     }
 }
 
