--- a/src/app/post-login/components/financial-data/financial-data.component.html
+++ b/src/app/post-login/components/financial-data/financial-data.component.html
@@ -52,6 +52,7 @@
             [paginateChildRows]="true"
             [getRowStyle]="getRowStyle"
             (paginationChanged)="onPaginationChanged($event)"
+            [enableCharts]="true"
             (gridReady)="onGridReady($event)"
             >
         </ag-grid-angular>
