--- a/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
+++ b/src/app/post-login/components/custom-groups/create-new-group/create-new-group.component.scss
@@ -322,9 +322,16 @@ button:focus{
 
 .form-actions{
     display: flex;
-    flex-direction: column;
     gap: 12px;
     margin-top: 25px;
+    grid-column: 1/-1;
+    justify-content: flex-end;
+
+    @media(min-width:1920px) {
+        flex-direction: column;
+        grid-column: unset;
+        justify-content: flex-start;
+    }
 }
 
 .btn-save{
@@ -385,7 +392,6 @@ button:focus{
     }
 }
 
-
 // TREEVIEW SCROLLBAR //
 ::ng-deep{
     .k-treeview::-webkit-scrollbar {
@@ -407,7 +413,6 @@ button:focus{
         background-color: #acacac;
     }
 }
-
 
 // SELECTOR POPUP //
 ::ng-deep .k-dialog.list-dialog {
@@ -468,7 +473,11 @@ button:focus{
 .table-section{
     margin-top: 24px;
     position: relative;
-    grid-column: 1/3;
+    grid-column: 1/-1;
+
+    @media(min-width:1920px) {
+        grid-column: 1/3;
+    }
 }
 
 // TABLE STYLE //
@@ -599,6 +608,10 @@ button:focus{
 
     .ag-pinned-left-header .ag-header-cell-text{
         text-transform: none;
+    }
+
+    .ag-center-cols-container{
+        min-width: 100%;
     }
 }
 
