--- a/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.scss
+++ b/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.scss
@@ -51,6 +51,38 @@ button:focus {
     }
 }
 
+.search-section {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-end;
+
+    & .input-container {
+      position: relative;
+
+      img {
+        height: 16px;
+        width: 16px;
+        position: absolute;
+        left: 12px;
+        top: 9px;
+      }
+
+      input {
+        width: 507px;
+        color: #808080;
+        font-family: "Proxima Nova";
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 16px;
+        padding: 7px 12px 7px 36px;
+        border-radius: 4px;
+        border: 1px solid #dfdfdf;
+        background: #fff;
+      }
+    }
+  }
+
 .gap-10 {
     gap: 10px;
 }
@@ -104,7 +136,7 @@ button:focus {
 }
 
 .selection-section {
-    gap: 10px;
+    gap: 20px;
     border-radius: 4px 4px 0px 0px;
     border-top: 1px solid #C1BDAE;
     border-right: 1px solid #C1BDAE;
@@ -286,21 +318,15 @@ button:focus {
     .ag-pinned-left-header .ag-header-cell-text {
         text-transform: none;
     }
+
+    .ag-center-cols-container{
+        min-width: 100%;
+    }
 }
 
 // CHECKBOX //
-:host ::ng-deep .ag-pinned-left-cols-container {
-
-    .ag-checkbox-input-wrapper input,
-    .ag-checkbox-input-wrapper {
-        width: 16px;
-        height: 16px;
-    }
-
-    .ag-checkbox-input-wrapper.ag-checked::after {
-        margin-top: -3px;
-    }
-
+:host ::ng-deep .ag-pinned-left-cols-container,
+:host ::ng-deep .ag-pinned-left-header {
     .ag-row-level-1 .ag-selection-checkbox {
         margin-left: 15px;
     }
@@ -309,6 +335,57 @@ button:focus {
     .ag-row-level-1 .ag-row-group-indent-1 {
         margin-left: 0;
     }
+
+    .ag-checkbox-input-wrapper .ag-checked {
+        font-size: 20px !important;
+    }
+    
+    .ag-checkbox-input-wrapper.ag-checked::after {
+        display: block;
+        content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' fill='none'  viewBox='0 0 24 24' stroke-width='3' stroke='white' class='w-6 h-6'> <path stroke-linecap='round' stroke-linejoin='round' d='M4.5 12.75l6 6 9-13.5' class='icons' /></svg>");
+        background-size: 28px 28px !important;
+        background: fixed;
+        background-size: cover;
+        width: 11Px;
+        margin-left: 2px;
+        margin-top: -3px;
+    }
+    
+    .ag-checkbox-input {
+        appearance: none;
+        -webkit-appearance: none;
+    
+        &:checked {
+            background-color: #296689;
+            border: none;
+    
+            &::after {
+                display: none;
+            }
+        }
+    }
+    
+    .ag-checkbox-input-wrapper input,
+    .ag-checkbox-input-wrapper {
+        -webkit-appearance: none;
+        appearance: none;
+        opacity: 1 !important;
+        border: 2px solid #d0d0d0;
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        margin-top: -4px;
+    }
+    
+    .ag-checkbox .ag-input-wrapper {
+        border: none;
+        box-shadow: none;
+    }
+    
+    .ag-checkbox-input-wrapper::after {
+        display: none;
+    }
+    
 }
 
 // RESET BUTTON //
@@ -492,58 +569,6 @@ button:focus {
         position: absolute !important;
     }
 }
-
-// CHECKBOX //
-:host ::ng-deep .ag-checkbox-input-wrapper .ag-checked {
-    font-size: 20px !important;
-}
-
-:host ::ng-deep .ag-checkbox-input-wrapper.ag-checked::after {
-    display: block;
-    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' fill='none'  viewBox='0 0 24 24' stroke-width='3' stroke='white' class='w-6 h-6'> <path stroke-linecap='round' stroke-linejoin='round' d='M4.5 12.75l6 6 9-13.5' class='icons' /></svg>");
-    background-size: 28px 28px !important;
-    background: fixed;
-    background-size: cover;
-    width: 11Px;
-    margin-left: 2px;
-    margin-top: -2px;
-}
-
-:host ::ng-deep .ag-checkbox-input {
-    appearance: none;
-    -webkit-appearance: none;
-
-    &:checked {
-        background-color: #296689;
-        border: none;
-
-        &::after {
-            display: none;
-        }
-    }
-}
-
-:host ::ng-deep .ag-checkbox-input-wrapper input,
-.ag-checkbox-input-wrapper {
-    -webkit-appearance: none;
-    appearance: none;
-    opacity: 1 !important;
-    border: 2px solid #d0d0d0;
-    width: 15px;
-    height: 15px;
-    border-radius: 2px;
-    margin-top: -4px;
-}
-
-:host ::ng-deep .ag-checkbox .ag-input-wrapper {
-    border: none;
-    box-shadow: none;
-}
-
-:host ::ng-deep .ag-checkbox-input-wrapper::after {
-    display: none;
-}
-
 
 // DATE PICKER //
 .date-picker {
@@ -887,5 +912,16 @@ button:focus {
     .k-dialog-wrapper .k-svg-i-x {
         border-radius: 50% !important;
         border: 2px solid black !important;
+    }
+}
+
+::ng-deep .deactivate-popup{
+    .k-datepicker{
+        width: 120px;
+    }
+
+    .k-input-inner{
+        font-weight: 600;
+        font-size: 14px;
     }
 }
