--- a/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.html
+++ b/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.html
@@ -25,11 +25,11 @@
                         <img src="../../.../../../../../assets/images/cancel-outline-rounded.svg" alt="close icon">
                     </button>
                 </div>
-                <div class="listbox-section-heading">Franchise Selection</div>
-                <div class="listbox-section-subheading">Select the new client(s) you want to add</div>
+                <div class="listbox-section-heading">CLIENT/FRANCHISE SELECTION</div>
+                <div class="listbox-section-subheading">Select the new Client(s)/franchise(s) you want to add</div>
                 <div class="list-container d-flex gap-25 align-items-center">
                     <div class="parent-list">
-                        <div class="list-heading">Client list</div>
+                        <div class="list-heading">Client/franchise list</div>
                         <div class="light-border">
                             <kendo-treeview
                                 kendoTreeViewHierarchyBinding
@@ -59,7 +59,7 @@
                     </div>
         
                     <div class="child-list">
-                        <div class="list-heading">Selected clients</div>
+                        <div class="list-heading">Selected Client/franchise</div>
                         <div class="light-border">
                             <kendo-treeview
                                 kendoTreeViewHierarchyBinding
