--- a/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.scss
+++ b/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.scss
@@ -925,3 +925,9 @@ button:focus {
         font-size: 14px;
     }
 }
+
+::ng-deep .expand-icon{
+    position: absolute;
+    left: 25px;
+    height: 20px;
+  }
