--- a/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.scss
+++ b/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.scss
@@ -136,11 +136,10 @@ button:focus {
 }
 
 :host ::ng-deep .create-new-dropdown.option-selected {
-    .k-input-inner::before {
-        content: '' !important;
+    .k-input-inner .k-input-value-text{
+        display: none;
     }
 }
-
 //POPUP SETTING //
 ::ng-deep .chat-node-category .create-new-dropdown {
     .k-animation-container {
