--- a/src/app/post-login/components/chat-configuration/chat-question-answer-client/chat-question-answer-client.component.html
+++ b/src/app/post-login/components/chat-configuration/chat-question-answer-client/chat-question-answer-client.component.html
@@ -3,14 +3,14 @@
         <div class="section-header">
             <div class="heading">
                 <img src="assets/images/person-pin-outline-rounded.svg" alt="Client icon">
-                <h1>All Clients</h1>
+                <h1>Chat Questions and Answers - Clients</h1>
             </div>
     
             <div class="search-section">
                 <div class="input-container">
                     <input 
                         type="text" 
-                        placeholder="Search client, franchise or assessment.."        
+                        placeholder="Search"        
                         id="filter-text-box"
                         (input)="onSearch()"
                     >
@@ -48,6 +48,7 @@
                 [rowData]="rowData"
                 [gridOptions]="gridOptions"
                 [sideBar]="sideBar"
+                [enableRangeSelection]="true"
                 (toolPanelVisibleChanged)="onToolPanelVisibleChanged($event)"
                 (gridReady)="onGridReady($event)">
             </ag-grid-angular>
@@ -85,6 +86,8 @@
                         textField="value"
                         valueField="value"
                         [valuePrimitive]=true
+                        [filterable]="true"
+                        (filterChange)="handleFilter($event, 'existingQuestions')"
                         (open)="onDropDownOpen($event,'existingQue')"
                         (close)="onDropDownClose($event,'existingQue')"
                         [class.dropdown-open]="isExistingQueDropDownOpen"
@@ -105,6 +108,8 @@
                         class="dropdown"
                         textField="value"
                         valueField="value"
+                        [filterable]="true"
+                        (filterChange)="handleFilter($event, 'clients')"
                         [valuePrimitive]=true
                         (open)="onDropDownOpen($event,'client')"
                         (close)="onDropDownClose($event,'client')"
@@ -132,6 +137,10 @@
                         (close)="onDropDownClose($event,'category')"
                         [class.dropdown-open]="isCategoryDropDownOpen"
                         formControlName="category"
+                        [filterable]="true"
+                        (filterChange)="handleFilter($event, 'associatedCategory')"
+                        textField="value"
+                        valueField="id"
                         >
                     </kendo-dropdownlist>                  
                 </kendo-formfield>
@@ -156,7 +165,7 @@
             </div>
         </form>
 
-        <form class="k-form k-form-md" [formGroup]="answerForm" (ngSubmit)="onSaveChanges(questionForm,'answer')" *ngIf="isAnswerClientFlyOutOpen">
+        <form class="k-form k-form-md" [formGroup]="answerForm" (ngSubmit)="onSaveChanges(answerForm,'answer')" *ngIf="isAnswerClientFlyOutOpen">
             <div class="formSection d-flex flex-column custom-gap-5">
                 <kendo-formfield>
                     <kendo-label class="label-text">Select Question</kendo-label>
@@ -166,6 +175,8 @@
                         textField="value"
                         valueField="value"
                         [valuePrimitive]=true
+                        [filterable]="true"
+                        (filterChange)="handleFilter($event, 'existingQuestions')"
                         (open)="onDropDownOpen($event,'existingQue')"
                         (close)="onDropDownClose($event,'existingQue')"
                         [class.dropdown-open]="isExistingQueDropDownOpen"
@@ -186,22 +197,14 @@
                         class="dropdown"
                         textField="value"
                         valueField="value"
+                        [filterable]="true"
+                        (filterChange)="handleFilter($event, 'clients')"
                         [valuePrimitive]=true
                         (open)="onDropDownOpen($event,'client')"
                         (close)="onDropDownClose($event,'client')"
                         [class.dropdown-open]="isClientDropDownOpen"
                         formControlName="client">
                     </kendo-dropdownlist>     
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label class="label-text">Associated node name</kendo-label>
-                    <input formControlName="nodeName" kendoTextBox  [readonly]="true">
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label class="label-text">Associated category</kendo-label>
-                    <input formControlName="category" kendoTextBox  [readonly]="true">
                 </kendo-formfield>
 
                 <kendo-formfield>
@@ -218,7 +221,7 @@
                 </kendo-formfield>
     
                  <div class="buttons-container d-flex gap-2">
-                    <button class="btn btn-save" type="submit" [disabled]="!questionForm.valid">Save Changes</button>
+                    <button class="btn btn-save" type="submit" [disabled]="!answerForm.valid">Save Changes</button>
                     <button class="btn btn-cancel" (click)="onCreateFlyOutClose()">Cancel</button>
                 </div>
             </div>
@@ -256,6 +259,11 @@
                         (close)="onDropDownClose($event,'category')"
                         [class.dropdown-open]="isCategoryDropDownOpen"
                         formControlName="category"
+                        [filterable]="true"
+                        [valuePrimitive]=true
+                        (filterChange)="handleFilter($event, 'associatedCategory')"
+                        textField="value"
+                        valueField="id"
                         >
                     </kendo-dropdownlist>                  
                 </kendo-formfield>
@@ -295,17 +303,7 @@
                 <kendo-formfield>
                     <kendo-label class="label-text">Client</kendo-label>
                     <input formControlName="client" kendoTextBox [readOnly]="true">
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label class="label-text">Associated node name</kendo-label>
-                    <input formControlName="nodeName" kendoTextBox [readOnly]="true">
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label class="label-text">Associated category</kendo-label>
-                    <input formControlName="category" kendoTextBox [readOnly]="true">
-                </kendo-formfield>
+                </kendo-formfield>  
 
                 <kendo-formfield>
                     <kendo-label class="label-text">Status</kendo-label>
