--- a/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.html
+++ b/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" *ngIf="groupName">
+<div class="main-container edit-membership" *ngIf="groupName">
     <div class="append-container" #container></div>
 
     <div class="section-header margin-b-30">
