--- a/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.scss
+++ b/src/app/post-login/components/custom-groups/edit-membership/edit-membership.component.scss
@@ -928,6 +928,27 @@ button:focus {
 
 ::ng-deep .expand-icon{
     position: absolute;
-    left: 25px;
-    height: 20px;
+    left: 7px;
+    top: 9px;
+    height: 8px;
+}
+
+:host ::ng-deep .row-expanded{
+    transform: rotate(270deg);
+}
+
+::ng-deep .edit-membership .ag-pinned-left-header .ag-header-cell {
+    padding-left: 24px !important;
+}
+
+:host ::ng-deep  .ag-cell {
+    display: flex;
+    align-items: center;
+
+    .ag-icon {
+      position: absolute;
+      top: 1px;
+      left: 7px;
+      color: #000;
+    }
   }
