--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -140,131 +140,15 @@ button:focus {
 }
 
 // TABLE STYLE //
-.ag-theme-balham {
-    --ag-selected-row-background-color: #f3f6f7 !important;
-    --ag-row-hover-color: none !important;
-    --ag-input-focus-box-shadow: 0 0 2px 1px transparent !important;
-}
-
 :host ::ng-deep{
-    .ag-header-row {
-        color: #2A2A2A;
-        font-family: 'Proxima Nova';
-        font-size: 12px;
-        font-weight: 600;
-        line-height: 16px;
-    }
+    // FOR CHILD COUNT // 
+    .ag-group-child-count {
+       display: none !important;
+   }
 
-    .ag-header-group-text,
-    .ag-header-cell-text{
-        text-transform: capitalize;
-    }
-
-    .ag-row-odd {
-        background: none;
-    }
-
-    .ag-row-selected::before {
-        background-color: transparent;
-    }
-
-    .ag-cell {
-        display: flex;
-        align-items: center;
-        font-family:'Proxima Nova';
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 16px; 
-    }
-
-    .ag-cell-expandable {
-        align-items: center;
-    }
-
-    .ag-row-level-1 {
-        background: rgba(217, 217, 217, 0.2);
-    }
-
-    .ag-icon-tree-closed::before {
-        content: url("../../../../assets/images/chevron-right-icon.svg");
-    }
-
-    .ag-icon-tree-open::before {
-        content: url("../../../../assets/images/chevron-down-icon.svg");
-    }
-
-    .ag-group-contracted,
-    .ag-group-expanded {
-        width: 11px;
-        height: unset !important;
-        margin-top: -5px;
-    }
-
-    // FLOATING FILTER
-    .ag-floating-filter {
-        border-top: none !important;
-        &::after {
-        display: none;
-        }
-    }
-
-    .ag-floating-filter-button {
-        margin-left: unset;
-    }
-
-    .ag-icon-filter::before {
-        content: url("../../../../assets/images/floating-filter-icon.svg");
-    }
-
-    .ag-header-row-column-filter {
-        background-color: #fff;
-
-        .ag-floating-filter input {
-            background-color: #fff;
-            border: none;
-            border-bottom: 1px solid #dfdfdf;
-        }
-    }
-
-    .ag-ltr .ag-header-expand-icon{
-        padding-left: 5px;
-    }
-
-    .ag-header-expand-icon-collapsed .ag-icon-contracted::before{
-        content: url("../../../../assets/images/chevron-right-icon.svg");
-    }
-    .ag-icon-expanded::before{
-        content: url("../../../../assets/images/chevron-left.svg");
-    }
-
-    .ag-icon-contracted{
-        margin-top: -4px;
-    }
-
-    .ag-icon-expanded{
-        margin-top: -8px;
-    }
-
-    .ag-column-panel-column-select{
-        border-top: none;
-    }
-
-    .ag-column-select-header-icon .ag-icon-tree-open,
-    .ag-column-select-column-group .ag-icon-tree-open,
-    .ag-filter-toolpanel-group-title-bar-icon,
-    .ag-filter-toolpanel-expand{
-        margin-top: -6px;
-    }
-
-    .ag-column-select-header-icon .ag-icon-tree-closed,
-    .ag-filter-toolpanel-group-title-bar-icon .ag-icon-tree-open,
-    .ag-filter-toolpanel-expand .ag-icon-tree-open{
-        margin-top: -3px;
-    }
-
-    .ag-column-select-column-group .ag-icon-tree-closed{
-        margin-top: -5px;
-    }
+   .ag-cell-wrapper {
+       align-items: center !important;
+   }
 }
 
 // CHECKBOX //
@@ -305,189 +189,9 @@ button:focus {
     }
 }
 
-// RESET BUTTON //
-.resetButton {
-    position: absolute;
-    background-color: #f7f7f7;
-    border-right: 1px solid rgb(189, 195, 199) !important;
-    height: 63px;
-    width: 87.5%;
-    border: 0;
-    font-size: 14px;
-    color: #0a4569;
-    font-weight: 700;
-    top: 0;
-    left: 0;
-    border-bottom: 1px solid rgb(189,195,199);
-
-    &:hover {
-      background: #c8d3dc !important;
-    }
-}
-
-// FLY OUT PANEL//
-:host ::ng-deep {
-    .ag-side-bar {
-        padding: 0 4px 0px 0px;
-        position: relative;
-    }
-
-    .ag-side-button-label,
-    .ag-tool-panel-wrapper,
-    .ag-group-title {
-        color: #2a2a2a;
-        font-family: "Proxima Nova";
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 16px;
-    }
-    .ag-side-buttons {
-        padding-top: 0;
-        margin-top: 33px;
-        margin-left: 5px;
-    }
-
-    .ag-side-button .ag-icon-columns::before {
-        content: url("/assets/images/column-icon-dark.svg");
-    }
-
-    .ag-side-button .ag-icon-filter::before {
-        content: url("/assets/images/floating-filter-icon.svg");
-    }
-
-    .ag-side-button-icon-wrapper {
-        margin-bottom: 4px;
-    }
-
-    button.ag-side-button-button {
-        border: none;
-        padding: 0;
-    }
-
-    .ag-side-button:last-child {
-        margin-top: 31px;
-    }
-
-    .ag-side-bar-right .ag-tool-panel-wrapper {
-        margin-top: 63px;
-    }
-}
-
-// STATUSBAR //
-:host ::ng-deep {
-    .ag-status-name-value {
-      color: #2a2a2a;
-      font-family: "Proxima Nova";
-      font-size: 12px;
-      line-height: 16px;
-      padding: 0;
-    }
-  
-    .ag-status-name-value-value {
-      font-weight: 700;
-    }
-  
-    .ag-status-name-value span:first-child {
-      font-weight: 400;
-    }
-  
-    .ag-status-bar {
-      min-height: 37px;
-      padding: 11px 25px;
-    }
-}
-
-.status-bar-text {
-    position: absolute;
-    left: 24px;
-    bottom: 48px;
-  
-    p {
-        color: #2A2A2A;
-        font-family: 'Proxima Nova';
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 16px;
-    }
-  
-    span {
-      font-weight: 700;
-    }
-}
 
 
-// PAGING PANEL 
-.items-dropdown {
-    position: absolute;
-    bottom: 10px;
-    left: 24px;
-    background: none;
-    border: none;
-    color: #2A2A2A;
-
-    font-family: 'Proxima Nova';
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 16px;
-}
-
-
-:host ::ng-deep {
-    .ag-paging-panel{
-        height: 37px;
-        background: #F3F6F7;
-        padding: 11px 25px 11px 24px;
-        color: #2A2A2A;
-        font-family: 'Proxima Nova';
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 16px; 
-    }
-
-    .ag-paging-row-summary-panel {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    .ag-paging-page-summary-panel {
-        position: absolute;
-        right: 12px;
-    }
-
-    .ag-icon::before {
-        color: #296689 !important;
-    }
-  
-    .ag-paging-button.ag-disabled {
-        opacity: 0.4;
-    }
-}
-
-// SCROLLBAR //
-:host ::ng-deep {
-    .ag-ltr .ag-body-vertical-scroll.ag-scrollbar-invisible {
-      right: 4px;
-    }
-    .ag-root ::-webkit-scrollbar {
-      width: 6px !important;
-      height: 6px !important;
-      margin-right: 2px;
-      z-index: 99;
-    }
-  
-    .ag-root ::-webkit-scrollbar-thumb {
-      background-color: #d9d9d9;
-      border-radius: 6px;
-    }
-  
-    .ag-body-vertical-scroll {
-      right: 5px;
-      position: absolute !important;
-    }
-  }
-
-  //PARENT LINK
+//PARENT LINK
   :host ::ng-deep .parent-link{
     text-decoration: none;
     font-weight: 500;
@@ -498,95 +202,13 @@ button:focus {
     color: #446a94;
 }
 
+:host ::ng-deep .parent-link-inactive{
+    color:#a7b8cc;
+}
+
 ::ng-deep .hide-header-name .ag-header-cell-comp-wrapper .ag-cell-label-container .ag-header-cell-label .ag-header-cell-text{
     display: none;
 }
-
-:host ::ng-deep {
-    .ok-btn{
-        display: flex;
-        height: 32px;
-        justify-content: center;
-        align-items: center;
-        border-radius: 4px;
-        background: #296689;
-        padding: 8px 14px 8px 15px;
-        text-transform: uppercase;
-        font-family: 'Proxima Nova';
-        color: #FFF;
-        font-size: 14px;
-        line-height: 16px;
-        font-weight: 600;
-
-        &:hover {
-            background: #296689;
-        }
-    }
-
-    .cancel-btn {
-        display: flex;
-        width: 92px;
-        height: 32px;
-        justify-content: center;
-        align-items: center;
-        border-radius: 4px;
-        background: #e4eff3;
-        padding: 8px 14px 8px 15px;
-        text-transform: uppercase;
-        font-family: 'Proxima Nova';
-        color: #296689;
-        font-size: 14px;
-        font-weight: 800;
-        line-height: 16px;
-
-        &:hover {
-            background: #e4eff3;
-        }
-    }
-
-    .k-dialog-wrapper .k-dialog {
-        padding: 20px;
-        border-radius: 5px;
-    }
-
-    .k-dialog-actions {
-        width: 65% !important;
-        border: transparent !important;
-        padding-inline: 16px !important;
-    }
-
-    .k-window-title {
-        font-size: 20px;
-        font-weight: 600;
-        padding-bottom: 20px;
-        border-bottom: 2px solid #DADADA;
-    }
-
-    .k-window-titlebar {
-        padding: 12px 0px 12px 12px;
-    }
-
-    .k-dialog-titlebar {
-        background-color: transparent;
-        border-bottom: 2px solid #fafafa;
-    }
-
-    .k-window-content {
-        font-weight: 600;
-        margin-bottom: 15px;
-    }
-
-    .k-window-titlebar-actions {
-        padding-bottom: 30px !important;
-
-    }
-
-    .k-button-md.k-icon-button .k-button-icon {
-        border-radius: 50% !important;
-        border: 2px solid black !important;
-    }
-}
-
 
 .btn-add-year {
     background-color: #f5f7f7;
