--- a/src/app/post-login/components/leads-per-community/leads-per-community.component.html
+++ b/src/app/post-login/components/leads-per-community/leads-per-community.component.html
@@ -17,52 +17,16 @@
             <button class="btn btn-export" (click)="onExport()">Export</button>
         </div>
     </div>
-    <div class="table-section">
-      <ag-grid-angular
-        style="flex-grow: 1; height: 800px"
-        class="ag-theme-balham ag-grid"
-        [rowHeight]="36"
-        [columnDefs]="columnDef"
-        [defaultColDef]="defaultColDef"
-        [autoGroupColumnDef]="autoGroupColumnDef"
-        [rowModelType]="rowModelType"
-        [treeData]="true"
-        [isServerSideGroup]="isServerSideGroup"
-        [getServerSideGroupKey]="getServerSideGroupKey"
-        [rowData]="rowData"
-        [suppressDragLeaveHidesColumns]="true"
-        [suppressMakeColumnVisibleAfterUnGroup]="true"
-        [suppressRowGroupHidesColumns]="true"
-        [gridOptions]="gridOptions"
-        [sideBar]="sideBar"
-        [rowSelection]="rowSelection"
-        (selectionChanged)="onSelectionChanged($event)"
-        (toolPanelVisibleChanged)="onToolPanelVisibleChanged($event)"
-        [pagination]="true"
-        [cacheBlockSize]="cacheBlockSize"
-        [paginationPageSize]="100"
-        [paginateChildRows]="true"
-        [enableCharts]="true"
-        (gridReady)="onGridReady($event)"
-        >
-        </ag-grid-angular>
 
-        <div class="status-bar-text" *ngIf="selectedNodes.length > 0 && rowIndex !=null">
-          <p>Rows: <span>{{rowIndex+1}} of {{totalRows}}</span></p>
-        </div>
-        
-        <select
-        class="items-dropdown"
-        [(ngModel)]="selectedValue"
-        (change)="onItemsPerPageChange(selectedValue)"
-      >
-        <option
-          *ngFor="let option of paginationOptions"
-          [attr.selected]="option.value == 100"
-          [value]="option.value"
-        >
-          {{ option.title }}
-        </option>
-      </select>
-    </div>
+    <app-table
+      [ngClass]="{'hide-child-count': false}"
+      [rowHeight]="36"
+      [columnDefs]="columnDef"
+      [rowSelection]="rowSelection"
+      [rowData]="rowData"
+      [hierarchyColumnDef]="autoGroupColumnDef"
+      [gridOptions]="gridOptions"
+      [enableCharts]="true"
+      [treeData]="!!autoGroupColumnDef">
+    </app-table>
 </div>
